11/12/2014 - 1.0   - Fenix - initial release
13/12/2014 - 1.1   - Fenix - minor fixes to version compare
                           - removed crontab: contacting the update server is not so much expensive in terms of
                             performances, thus is better to check for an update in real time whenever a superadmin
                             connects to the server.
                           - increased _update_check_connect_delay to 30 seconds
14/12/2014 - 1.1.1 - Fenix - use B3 autorestart mode to reboot B3 after a successfull B3 update install
16/12/2014 - 1.1.2 - Fenix - use EVT_PUNKBUSTER_NEW_CONNECTION instead of EVT_CLIENT_AUTH in Frostbite games
18/12/2014 - 1.1.3 - Fenix - catch exceptions when upgrading B3 database and warn users if some errors are generated
                             while upgrading the B3 database
20/12/2014 - 1.1.4 - Fenix - added missing requiresConfigFile = False
                           - removed useless debug message
24/12/2014 - 1.1.5 - Fenix - use only EVT_CLIENT_AUTH: this event is fired in all the parser and behaves exactly in
                             the same way no matter the game we are running
31/12/2014 - 1.1.6 - Fenix - updated path to SQL update script
05/01/2014 - 1.1.7 - Fenix - added routine to perform B3 directory cleaning after successful update install