@@ -107,6 +107,7 @@ welcome: @conf/plugin_welcome.ini
 # location: @conf/plugin_location.ini
 # ipban: @conf/plugin_ipban.ini
 # translator: @conf/plugin_translator.ini
+# xlrstats: @conf/plugin_xlrstats.ini
 
 ## BF3
 # poweradminbf3: @conf/plugin_poweradminbf3.ini
@@ -119,8 +120,3 @@ welcome: @conf/plugin_welcome.ini
 ## UrT 4.1/4.2
 # poweradminurt: @conf/plugin_poweradminurt.ini
 # urtserversidedemo: @conf/plugin_urtserversidedemo.ini
-
-# This is a non-standard plugin, and quite resource heavy. Please take
-# a look in the B3 forums (look for XLR Extensions) for more
-# information before enabling this. Extra database tables are necessary.
-# xlrstats: @b3/extplugins/xlrstats/conf/plugin_xlrstats.ini
