@@ -1,61 +1,0 @@
-# CHANGELOG
-# 5/6/2008 - 0.6.0 - Mark Weirath (xlr8or@xlr8or.com)
-#   Added weapon replacements
-#   Added commands !xlrtopstats and !xlrhide
-# 8/9/2008 - 0.6.1 - Mark Weirath (xlr8or@xlr8or.com)
-#   Added onemaponly for 24/7 servers to count rounds correct
-# 27/6/2009 - 0.6.5 - Mark Weirath (xlr8or@xlr8or.com)
-#   No longer save worldkills
-# 28/6/2009 - 1.0.0 - Mark Weirath (xlr8or@xlr8or.com)
-#   Added Action classes
-# 5/2/2010 - 2.0.0 - Mark Weirath (xlr8or@xlr8or.com)
-#   Added Assist Bonus and History
-# 21/2/2010 - 2.1.0 - Mark Weirath (xlr8or@xlr8or.com)
-#   Better assist mechanism
-# 23/2/2010 - 2.2.0 - Mark Weirath (xlr8or@xlr8or.com)
-#   Adding table maintenance on startup
-# 24/2/2010 - 2.2.1 - Mark Weirath (xlr8or@xlr8or.com)
-#   Repaired self._xlrstatstables bug
-# 24/2/2010 - 2.2.2 - Mark Weirath (xlr8or@xlr8or.com)
-#   Repaired updateTableColumns() bug
-# 24-3-2010 - 2.2.3 - Mark Weirath - Minor fix in onEvent()
-# 10-8-2010 - 2.2.4 - Mark Weirath - BFBC2 adaptions (Bot Guid is Server, not WORLD)
-# 20-8-2010 - 2.2.5 - Mark Weirath
-#   Allow external function call for cmd_xlrtopstats
-#   Retrieve variables from webfront installation for topstats results
-# 23-8-2010 - 2.2.6 - Mark Weirath
-#   BugFix: Requires ConfigFile for the commands
-# 3-9-2010 - 2.2.7 - Mark Weirath
-#   Default action bonus set to +3 skillpoints (was 0)
-# 13-10-2010 - 2.2.8 - Mark Weirath
-#   BugFix: Empty field webfront Url is now allowed in config
-# 08-11-2010 - 2.2.9 - Mark Weirath
-#   Harden retrieval of webfront variables
-# 07-01-2011 - 2.3 - Mark Weirath
-#   XLRstats can now install default database tables when missing
-# 07-01-2011 - 2.3.1 - Mark Weirath
-#   Ability to disable plugin when not enough players are online
-# 07-01-2011 - 2.3.2 - Mark Weirath
-#   Update weapon tables for cod7.
-# 16-04-2011 - 2.3.3 - Mark Weirath
-#   Make sure we hide WORLD and Server in the webfront
-# 16-05-2011 - 2.4.0 - Mark Weirath
-#   Make use of sql files for updating table, no more methods in the plugin
-# 15-07-2011 - 2.5.0 - Mark Weirath
-#   Pythonized code.
-#   Added ability to hide bots from webfront and exclude damage/kills to and from bots to be processed
-# 24-09-2011 - 2.6.0 - Mark Weirath
-#   history functionality and crontabs moved to separate sub-plugin
-# 24-09-2011 - 2.6.1 - Mark Weirath
-#   added update .sql file to distro to enable weaponnames > 32 characters.
-#   no actual code was altered in the plugin except for the version to mark the change.
-# 19-10-2011 - 2.6.2 - Mark Weirath
-#   moved polling for webfront variables to a separate thread, to avoid startup delay when website is offline
-# 31-01-2012 - 2.7.0 - Mark Weirath
-#   integration of the ctime plugin as a subplugin
-# 03-03-2012 - 2.7.1 - Mark Weirath
-#   added silent mode and some minor rewrites
-
-# CTime Plugin was created by Anubis and integrated in XLRstats since version 2.7.0
-# Updates to this part of the plugin by:
-# AFC~Gagi2~ (gagi2@austrian-funclan.com) and xlr8or
